# encelade-register-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
config/: README.md  local.yaml
proto/: register.proto
register-backend/: Cargo.toml  README.md  build.rs
register-backend/config/: local.yaml
register-backend/src/: config.rs  main.rs  mongodb.rs  observability.rs  register.rs
register-backend/src/mongodb/: register_types.rs  string_id.rs  traces_for.rs
src/: auth.rs  config.rs  main.rs  mongodb.rs  observability.rs  register.rs  service.rs
src/mongodb/: register_types.rs
