[package]
name = "encelade-register-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
config = "0.14.0"
mongodb = "2.8.2"
num-derive = "0.4.2"
num-traits = "0.2.18"
prost = "0.12.4"
prost-types = "0.12.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_repr = "0.1.19"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11.0"
